# app.js
@@ -5,6 +5,7 @@ const hospitalesRoutes = require('./routes/hospitales');
 const usuariosRoutes = require('./routes/usuarios');
 const productosRoutes = require('./routes/productos');
 const pedidosRoutes = require('./routes/pedidos');
+const insumosRoutes = require('./routes/insumos');
 const swaggerUi = require('swagger-ui-express');
 const swaggerFile = require('./swagger_output.json');
 
@@ -18,6 +19,7 @@ app.use('/hospitales', hospitalesRoutes);
 app.use('/usuarios', usuariosRoutes);
 app.use('/productos', productosRoutes);
 app.use('/pedidos', pedidosRoutes);
+app.use('/insumos', insumosRoutes);
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerFile));
 
 app.get('/', (req, res) => {
