# controllers/productosController.js
@@ -1,8 +1,11 @@
+
 let productos = [
     { id: 1, nombre: 'Producto 1', descripcion: 'Descripción 1', imagen: 'data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAA...', precio: 10.0 },
     { id: 2, nombre: 'Producto 2', descripcion: 'Descripción 2', imagen: 'data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAA...', precio: 20.0 },
     { id: 3, nombre: 'Producto 3', descripcion: 'Descripción 3', imagen: 'data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAA...', precio: 100.0 },
-    { id: 4, nombre: 'Producto 4', descripcion: 'Descripción 4', imagen: 'data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAA...', precio: 80.0 }
+    { id: 4, nombre: 'Producto 4', descripcion: 'Descripción 4', imagen: 'data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAA...', precio: 80.0 },
+    { id: 1, nombre: 'Producto 1', descripcion: 'Descripción 1', insumos: [{id: 1, cantidad: 3}, {id: 2, cantidad: 1}],imagen: 'data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAA...', precio: 10.0 },
+    { id: 2, nombre: 'Producto 2', descripcion: 'Descripción 2', insumos: [{id: 2, cantidad: 4}],imagen: 'data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAA...', precio: 20.0 }
   ];
   
   exports.getProductos = (req, res) => {
@@ -18,14 +21,14 @@ let productos = [
       res.status(404).json({ message: 'Producto no encontrado' });
     }
   };
-  
+
   exports.createProducto = (req, res) => {
     const newProducto = req.body;
     newProducto.id = productos.length ? productos[productos.length - 1].id + 1 : 1;
     productos.push(newProducto);
     res.status(201).json(newProducto);
   };
-  
+
   exports.updateProducto = (req, res) => {
     const { id } = req.params;
     const updatedProducto = req.body;
@@ -51,3 +54,44 @@ let productos = [
 
   exports.productos = productos;
   
+  
+  exports.addInsumoToProducto = (req, res) => {
+    const { id, insumoId } = req.params;
+    const { cantidad } = req.body;
+    const producto = productos.find(p => p.id == id);
+  
+    if (producto) {
+      const insumoExistente = producto.insumos.find(i => i.id == insumoId);
+      if (insumoExistente) {
+        insumoExistente.cantidad += cantidad;
+      } else {
+        producto.insumos.push({ id: insumoId, cantidad });
+      }
+      res.json(producto);
+    } else {
+      res.status(404).json({ message: 'Producto no encontrado' });
+    }
+  };
+
+  exports.removeInsumoFromProducto = (req, res) => {
+    const { id, insumoId } = req.params;
+    const producto = productos.find(p => p.id == id);
+  
+    if (producto) {
+      const insumoIndex = producto.insumos.findIndex(i => i.id == insumoId);
+      if (insumoIndex !== -1) {
+        producto.insumos.splice(insumoIndex, 1);
+        res.json(producto);
+      } else {
+        res.status(404).json({ message: 'Insumo no encontrado en el producto' });
+      }
+    } else {
+      res.status(404).json({ message: 'Producto no encontrado' });
+    }
+  };
+
+  exports.removeInsumoFromAllProductos = (insumoId) => {
+    productos.forEach(producto => {
+        producto.insumos = producto.insumos.filter(insumo => insumo.id != insumoId);
+    });
+};
